enhanced edit and delete image in book/owner, Catch input errors on owner pages

--- a/BookStore/Areas/Owner/Views/Authors/Index.cshtml
+++ b/BookStore/Areas/Owner/Views/Authors/Index.cshtml
@@ -52,11 +52,11 @@
                                                 <input type="hidden" id="authorId">
                                                 <div class="form-group">
                                                     <label for="authorName">Author Name</label>
-                                                    <input type="text" class="form-control" id="authorName" placeholder="Enter Author Name">
+                                                    <input type="text" class="form-control" id="authorName" placeholder="Enter Author Name" required>
                                                 </div>
                                                 <div class="form-group">
                                                     <label for="authorDescription">Description</label>
-                                                    <textarea class="form-control" id="authorDescription" rows="3" placeholder="Enter Author Description"></textarea>
+                                                    <textarea class="form-control" id="authorDescription" rows="3" placeholder="Enter Author Description" required></textarea>
                                                 </div>
                                                 <div class="modal-footer">
                                                     <button type="submit" class="btn btn-primary">Submit</button>
