--- a/BookStore/Areas/Admin/Views/Customers/Index.cshtml
+++ b/BookStore/Areas/Admin/Views/Customers/Index.cshtml
@@ -40,7 +40,7 @@
                                                 <div class="form-group">
                                                     <label for="newPassword">New Password</label>
                                                     <input type="password" class="form-control" id="newPassword" required>
-                                                    <small id="newPasswordError" class="text-danger"></small>
+                                                    <div id="passwordStrength" style="color: red;"></div>
                                                 </div>
                                                 <div class="form-group">
                                                     <label for="confirmPassword">Confirm Password</label>
