--- a/BookStore/Areas/Admin/Views/Users/Index.cshtml
+++ b/BookStore/Areas/Admin/Views/Users/Index.cshtml
@@ -41,12 +41,12 @@
                                                 <div class="form-group">
                                                     <label for="newPassword">New Password</label>
                                                     <input type="password" class="form-control" id="newPassword" required>
-                                                    <small id="newPasswordError" class="text-danger"></small>
+                                                    <div id="passwordStrength" style="color: red;"></div>
                                                 </div>
                                                 <div class="form-group">
                                                     <label for="confirmPassword">Confirm Password</label>
                                                     <input type="password" class="form-control" id="confirmPassword" required>
-                                                    <small id="confirmPasswordError" class="text-danger"></small>
+                                                    @* <div id="passwordMatch" style="color: red;"></div> *@
                                                 </div>
                                                 <div class="modal-footer">
                                                     <button type="submit" class="btn btn-primary" id="saveButton">Save</button>
