--- a/BookStore/Areas/Owner/Views/Genres/Index.cshtml
+++ b/BookStore/Areas/Owner/Views/Genres/Index.cshtml
@@ -38,11 +38,11 @@
                                                 <input type="hidden" id="genreId">
                                                 <div class="form-group">
                                                     <label for="genreName">Genre Name</label>
-                                                    <input type="text" class="form-control" id="genreName" placeholder="Enter genre name">
+                                                    <input type="text" class="form-control" id="genreName" placeholder="Enter genre name" required>
                                                 </div>
                                                 <div class="form-group">
                                                     <label for="genreDescription">Description</label>
-                                                    <textarea class="form-control" id="genreDescription" rows="3" placeholder="Enter genre description"></textarea>
+                                                    <textarea class="form-control" id="genreDescription" rows="3" placeholder="Enter genre description" required></textarea>
                                                 </div>
                                                 <div class="modal-footer">
                                                     <button type="submit" class="btn btn-primary">Submit</button>
