--- a/BookStore/Areas/Owner/Views/Languages/Index.cshtml
+++ b/BookStore/Areas/Owner/Views/Languages/Index.cshtml
@@ -39,7 +39,7 @@
                                                 <input type="hidden" id="languageId">
                                                 <div class="form-group">
                                                     <label for="languageName">Language Name</label>
-                                                    <input type="text" class="form-control" id="languageName" placeholder="Enter Language Name">
+                                                    <input type="text" class="form-control" id="languageName" placeholder="Enter Language Name" required>
                                                 </div>
                                                 <div class="modal-footer">
                                                     <button type="submit" class="btn btn-primary">Save</button>
