--- a/BookStore/Areas/Owner/Views/Publishers/Index.cshtml
+++ b/BookStore/Areas/Owner/Views/Publishers/Index.cshtml
@@ -36,7 +36,7 @@
                                                 <input type="hidden" id="publisherId">
                                                 <div class="form-group">
                                                     <label for="publisherName">Publisher Name</label>
-                                                    <input type="text" class="form-control" id="publisherName" placeholder="Enter Publisher Name">
+                                                    <input type="text" class="form-control" id="publisherName" placeholder="Enter Publisher Name" required>
                                                 </div>
                                                 <div class="modal-footer">
                                                     <button type="submit" class="btn btn-primary">Save</button>
