--- a/BookStore/Views/Home/Detail.cshtml
+++ b/BookStore/Views/Home/Detail.cshtml
@@ -13,32 +13,33 @@
 						<div class="product-details-large tab-content">
 							<div class="tab-pane active show fade" id="pro-details1" role="tabpanel">
 								<div class="easyzoom easyzoom--overlay ">
-									<a href="assets/img/product/book/@Model.Image">
-										<img src="/img/product/book/@Model.Image" alt="">
-									</a>
+									@* <a href="@ViewBag.api/@Model.Image">
+										<img src="@ViewBag.api/@Model.Image" alt="">
+									</a> *@
+									<img src="@ViewBag.api/@Model.Image" alt="">
 								</div>
 							</div>
-							<div class="tab-pane fade" id="pro-details2" role="tabpanel">
+							@* <div class="tab-pane fade" id="pro-details2" role="tabpanel">
 								<div class="easyzoom easyzoom--overlay">
-									<a href="/img/product/book/@Model.Image">
-										<img src="/img/product/book/@Model.Image" alt="">
+									<a href="@ViewBag.api/@Model.Image">
+										<img src="@ViewBag.api/@Model.Image" alt="">
 									</a>
 								</div>
 							</div>
 							<div class="tab-pane fade" id="pro-details3" role="tabpanel">
 								<div class="easyzoom easyzoom--overlay">
-									<a href="/img/product/book/@Model.Image">
-										<img src="/img/product/book/@Model.Image" alt="">
+									<a href="@ViewBag.api/@Model.Image">
+										<img src="@ViewBag.api/@Model.Image" alt="">
 									</a>
 								</div>
 							</div>
 							<div class="tab-pane fade" id="pro-details4" role="tabpanel">
 								<div class="easyzoom easyzoom--overlay">
-									<a href="/img/product/book/@Model.Image">
-										<img src="/img/product/book/@Model.Image" alt="">
+									<a href="@ViewBag.api/@Model.Image">
+										<img src="@ViewBag.api/@Model.Image" alt="">
 									</a>
 								</div>
-							</div>
+							</div> *@
 						</div>
 					</div>
 				</div>
@@ -63,9 +64,9 @@
 					</div>
 					<p>@Model.Description</p>
 					<div class="quickview-plus-minus">
-						<div class="cart-plus-minus">
+						<div class="cart-plus-minus book-detail">
 							<div class="inc qtybutton">+</div>
-							<input type="text" value="02" name="qtybutton" id="quantity" class="cart-plus-minus-box">
+							<input type="text" value="01" name="qtybutton" id="quantity" class="cart-plus-minus-box book-detail">
 							<div class="inc qtybutton">-</div>
 						</div>
 						<div class="quickview-btn-cart">
@@ -363,6 +364,10 @@
 </div>
 
 @section Scripts {
+	<script>
+
+
+	</script>
 	<script src="~/js/main.js"></script>
 	<script src="~/js/cart.js"></script>
 	<script src="~/js/BookDetail.js"></script>
