--- a/BookStore/Views/Home/Shop.cshtml
+++ b/BookStore/Views/Home/Shop.cshtml
@@ -167,7 +167,7 @@
 												<div class="product-wrapper mb-30 single-product-list product-list-right-pr mb-60">
 													<div class="product-img list-img-width">
 														<a asp-controller="Home" asp-action="Detail" asp-route-id="@book.Id">
-															<img src="/img/product/book/@book.Image" alt="">
+															<img src="@ViewBag.api/@book.Image" alt="">
 														</a>
 														<span>hot</span>
 													</div>
