--- a/BookStore/Views/Shared/_Layout.cshtml
+++ b/BookStore/Views/Shared/_Layout.cshtml
@@ -255,7 +255,7 @@
 						<div class="copyright-2">
 							<p>
 								Copyright ©
-								<a asp-controller="Home" asp-action="Index">Book WonderLan</a> 2023 . All Right Reserved.
+								<a asp-controller="Home" asp-action="Index">Book WonderLand</a> 2023 . All Right Reserved.
 							</p>
 						</div>
 					</div>
