show review by each bookId, show filled start, create history order in profile

--- a/BookStore/Areas/Owner/Views/Authors/Index.cshtml
+++ b/BookStore/Areas/Owner/Views/Authors/Index.cshtml
@@ -27,7 +27,7 @@
                             @* <form class="form-inline" method="POST"> *@
                                 <div class="form-group">
                                     <div class="input-group">
-                                        <input type="text" class="form-control" placeholder="Search..." aria-label="Search">
+                                    <input type="text" class="form-control" placeholder="Search..." aria-label="Search" id="searchInput">
                                         <div class="input-group-append">
                                             <button type="button" class="btn btn-success">Search</button>
                                         </div>
