--- a/BookStore/Areas/Owner/Views/Books/Index.cshtml
+++ b/BookStore/Areas/Owner/Views/Books/Index.cshtml
@@ -94,7 +94,7 @@
                                                 <div class="form-group col-md-6">
                                                     <label for="fileInput" class="control-label">Image</label>
                                                     <div class="custom-file">                                                       
-                                                        <input type="file" class="custom-file-input" id="fileInput" onchange="updateLabel(this)" max="15360">
+                                                        <input type="file" class="custom-file-input" id="fileInput" name="imageFile" onchange="updateLabel(this)">
                                                         <label class="custom-file-label" for="fileInput">Choose an image:</label>
                                                     </div>
                                                     <div id="fileSizeError" style="color: red;"></div>
