--- a/BookStore/Areas/Owner/Views/Discounts/Index.cshtml
+++ b/BookStore/Areas/Owner/Views/Discounts/Index.cshtml
@@ -27,7 +27,7 @@
                             @* <form class="form-inline" method="POST"> *@
                                 <div class="form-group">
                                     <div class="input-group">
-                                        <input type="text" class="form-control" placeholder="Search..." aria-label="Search">
+                                    <input type="text" class="form-control" placeholder="Search..." aria-label="Search" id="searchInput">
                                         <div class="input-group-append">
                                             <button type="button" class="btn btn-success">Search</button>
                                         </div>
@@ -89,6 +89,9 @@
                                 </tr>
                             </thead>
                             <tbody id="discountList">
+                                <div id="noResultsMessage" class="alert alert-warning" style="display: none;">
+                                    No available values found.
+                                </div>
                                 @foreach (var discount in Model)
                                 {
                                     <tr id="row_@discount.Id">
