some small change

--- a/BookStore/Areas/Admin/Views/Customers/Index.cshtml
+++ b/BookStore/Areas/Admin/Views/Customers/Index.cshtml
@@ -6,6 +6,15 @@
 }
 
 <main id="main" class="main">
+    <div class="pagetitle">
+        <h1>Customer</h1>
+        <nav>
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a asp-controller="Dashboard" asp-action="Index">Home</a></li>
+                <li class="breadcrumb-item active">Customer</li>
+            </ol>
+        </nav>
+    </div><!-- End Page Title -->
     <section class="section">
         <div class="row">
             <div class="col-lg-12">
