--- a/BookStore/Areas/Admin/Views/Dashboard/Index.cshtml
+++ b/BookStore/Areas/Admin/Views/Dashboard/Index.cshtml
@@ -10,7 +10,7 @@
 		<h1>Dashboard</h1>
 		<nav>
 			<ol class="breadcrumb">
-				<li class="breadcrumb-item"><a asp-controller="Admin" asp-action="Index">Home</a></li>
+				<li class="breadcrumb-item"><a asp-controller="Dashboard" asp-action="Index">Home</a></li>
 				<li class="breadcrumb-item active">Dashboard</li>
 			</ol>
 		</nav>
