--- a/BookStore/Areas/Admin/Views/Genres/Index.cshtml
+++ b/BookStore/Areas/Admin/Views/Genres/Index.cshtml
@@ -3,6 +3,15 @@
     ViewData["Title"] = "Genre";
 }
 <main id="main" class="main">
+    <div class="pagetitle">
+        <h1>Genres</h1>
+        <nav>
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a asp-controller="Dashboard" asp-action="Index">Home</a></li>
+                <li class="breadcrumb-item active">Genres</li>
+            </ol>
+        </nav>
+    </div><!-- End Page Title -->
     <section class="section">
         <div class="row">
             <div class="col-lg-12">
