--- a/BookStore/wwwroot/css/bundle.css
+++ b/BookStore/wwwroot/css/bundle.css
@@ -197,7 +197,7 @@ label {
     text-shadow: none;
 }
 ::selection {
-    background: #4fc1f0;
+    background: #f44344;
     color: #fff;
     text-shadow: none;
 }
