--- a/BookStore/Areas/Owner/Views/Discounts/Index.cshtml
+++ b/BookStore/Areas/Owner/Views/Discounts/Index.cshtml
@@ -53,6 +53,7 @@
                                                 <div class="form-group">
                                                     <label for="discountName">Discount Name</label>
                                                     <input type="text" class="form-control" id="discountName" placeholder="Enter Discount Name" required>
+                                                    <div id="errorContainer" style="color: red; display: none;"></div>
                                                 </div>
                                                 <div class="form-group">
                                                     <label for="percentage">Percentage</label>
@@ -68,7 +69,7 @@
                                                 </div>
                                                 <div class="modal-footer">
                                                     <button type="submit" class="btn btn-primary">Submit</button>
-                                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                                                    <button type="button" class="btn btn-secondary" data-dismiss="modal" id="cancelButton">Cancel</button>
                                                 </div>
                                             </form>
                                         </div>
@@ -98,8 +99,8 @@
                                         <th scope="row">@discount.Id</th>
                                         <td>@discount.DiscountName</td>
                                         <td>@discount.Percentage</td>
-                                        <td>@discount.StartDate</td>
-                                        <td>@discount.EndDate</td>
+                                        <td>@discount.StartDate.ToString("yyyy-MM-dd")</td>
+                                        <td>@discount.EndDate.ToString("yyyy-MM-dd")</td>
                                         <td>
                                             <div class="flex-column align-items-center">
                                                 <button type="button" class="btn btn-danger" onclick="deleteDiscount(@discount.Id)">Delete</button>
