--- a/BookStore/Areas/Identity/Pages/Account/Login.cshtml
+++ b/BookStore/Areas/Identity/Pages/Account/Login.cshtml
@@ -30,15 +30,9 @@
                                 <div class="button-box">
                                     <button type="submit" class="default-btn floatright">Login</button>
                                 </div>
-                                <div>
-                                    <p>
-                                        <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
-                                    </p>
-                                    <p>
-                                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
-                                    </p>
-                                    <p>
-                                        <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">Resend email confirmation</a>
+                                <div class="button-box">
+                                    <p class="pt-2">
+                                        <button type="button" class="default-btn floatright"><a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a></button>
                                     </p>
                                 </div>
                             </form>
