--- a/BookStore/Areas/Owner/Views/Discounts/Index.cshtml
+++ b/BookStore/Areas/Owner/Views/Discounts/Index.cshtml
@@ -24,60 +24,58 @@
                     <div class="card-body">
                         <div class="d-flex justify-content-between align-items-center">
                             <h5 class="card-title">Discounts table</h5>
-                            @* <form class="form-inline" method="POST"> *@
-                                <div class="form-group">
-                                    <div class="input-group">
+                            <div class="form-group">
+                                <div class="input-group">
                                     <input type="text" class="form-control" placeholder="Search..." aria-label="Search" id="searchInput">
-                                        <div class="input-group-append">
-                                            <button type="button" class="btn btn-success">Search</button>
-                                        </div>
+                                    <div class="input-group-append">
+                                        <button type="button" class="btn btn-success">Search</button>
                                     </div>
                                 </div>
+                            </div>
                             <button onclick="exportToExcel()" class="btn btn-secondary">Export Excel</button>
-                            @* </form> *@
                             <button type="button" class="btn btn-info" data-toggle="modal" data-target="#discountModal">Add New Discount</button>
-                            
-                            <!-- Modal -->
-                            <div class="modal fade" id="discountModal" tabindex="-1" role="dialog" aria-labelledby="discountModalLabel" aria-hidden="true">
-                                <div class="modal-dialog" role="document">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <h5 class="modal-title" id="discountModalLabel">Add New Discount</h5>
-                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                                <span aria-hidden="true">&times;</span>
-                                            </button>
-                                        </div>
-                                        <div class="modal-body">
-                                            <form method="POST" id="myForm">
-                                                <input type="hidden" id="discountId">
-                                                <div class="form-group">
-                                                    <label for="discountName">Discount Name</label>
-                                                    <input type="text" class="form-control" id="discountName" placeholder="Enter Discount Name" required>
-                                                    <div id="errorContainer" style="color: red; display: none;"></div>
-                                                </div>
-                                                <div class="form-group">
-                                                    <label for="percentage">Percentage</label>
-                                                    <input type="number" class="form-control" id="percentage" placeholder="Enter Percentage" required>
-                                                </div>
-                                                <div class="form-group">
-                                                    <label for="startDate">Start Date</label>
-                                                    <input type="date" class="form-control" id="startDate" required>
-                                                </div>
-                                                <div class="form-group">
-                                                    <label for="endDate">End Date</label>
-                                                    <input type="date" class="form-control" id="endDate" required>
-                                                </div>
-                                                <div class="modal-footer">
-                                                    <button type="submit" class="btn btn-primary">Submit</button>
-                                                    <button type="button" class="btn btn-secondary" data-dismiss="modal" id="cancelButton">Cancel</button>
-                                                </div>
-                                            </form>
-                                        </div>
-                                       
+                        </div>
+
+                        <!-- Modal -->
+                        <div class="modal fade" id="discountModal" tabindex="-1" role="dialog" aria-labelledby="discountModalLabel" aria-hidden="true">
+                            <div class="modal-dialog" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="discountModalLabel">Add New Discount</h5>
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                        </button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <form method="POST" id="myForm">
+                                            <input type="hidden" id="discountId">
+                                            <div class="form-group">
+                                                <label for="discountName">Discount Name</label>
+                                                <input type="text" class="form-control" id="discountName" placeholder="Enter Discount Name" required>
+                                                <div id="errorContainer" style="color: red; display: none;"></div>
+                                            </div>
+                                            <div class="form-group">
+                                                <label for="percentage">Percentage</label>
+                                                <input type="number" class="form-control" id="percentage" placeholder="Enter Percentage" required>
+                                            </div>
+                                            <div class="form-group">
+                                                <label for="startDate">Start Date</label>
+                                                <input type="date" class="form-control" id="startDate" required>
+                                            </div>
+                                            <div class="form-group">
+                                                <label for="endDate">End Date</label>
+                                                <input type="date" class="form-control" id="endDate" required>
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="submit" class="btn btn-primary">Submit</button>
+                                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                                            </div>
+                                        </form>
                                     </div>
                                 </div>
                             </div>
                         </div>
+
                         <table class="table table-sm table-hover" id="discountTable">
                             <thead>
                                 <tr>
@@ -112,10 +110,8 @@
                             </tbody>
                         </table>
                         <!-- End small tables -->
-
                     </div>
                 </div>
-
             </div>
         </div>
     </section>
